--- a/Code/LagrangeParameters.ipynb
+++ b/Code/LagrangeParameters.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "\n",
     "from qubo import createBQM\n",
     "from samples import duplicates, overlaps, extractChosen\n",
+    "from plots import plotBoundaryStrength\n",
     "\n",
     "\n",
     "phrases = pd.read_csv(picklePath + \"phrases.csv\", index_col=[0,1])\n",
@@ -45,19 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "351\n",
       "4457\n"
      ]
     }
    ],
    "source": [
-    "print(sum(len(embedding[i]) for i in embedding))"
+    "print(len(phrases))\n",
+    "print(sum(len(embedding[i]) for i in embedding))\n",
+    "\n",
+    "bqm = createBQM(G, phrases, instruments)\n",
+    "#nx.draw(bqm.to_networkx_graph(), node_size=1)"
    ]
   },
   {
