--- a/Code/AnnealTime.ipynb
+++ b/Code/AnnealTime.ipynb
@@ -2,36 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "import matplotlib.pyplot as plt\n",
+    "IDENTIFIER = \"haydn-op1\"\n",
+    "NUM = 4\n",
+    "\n",
     "import json\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from dwave.system import DWaveSampler, FixedEmbeddingComposite\n",
-    "import dwave.inspector\n",
     "\n",
-    "from plotters import plotHistogram, annotateSampleGraph, plotCSV, plotSampleGraph, plotArrangement\n",
+    "from plots import plotCSV\n",
     "from qubo import createBQM\n",
-    "from sampleAnalysis import duplicates, findOverlaps, totalEntropy\n",
+    "from samples import firstValid, totalEntropy\n",
     "\n",
-    "identifier = \"Haydn-3\"\n",
-    "path = f\"../Pickles/{identifier}/{identifier}_\"\n",
     "\n",
-    "instruments = json.load(open(path + \"instruments.json\"))\n",
-    "phrases = pickle.load(open(path + \"phrases.pkl\", \"rb\"))\n",
-    "G = nx.read_graphml(path + \"graph.graphml\")\n",
-    "embedding = json.load(open(path + \"embedding.json\", \"r\"))\n",
+    "picklePath = f\"../Pickles/{IDENTIFIER}/{IDENTIFIER}_\"\n",
+    "numPath = f\"../Pickles/{IDENTIFIER}/{NUM}/{IDENTIFIER}_{NUM}_\"\n",
+    "dataPath = f\"../Data/{IDENTIFIER}/{NUM}/{IDENTIFIER}_{NUM}_\"\n",
+    "\n",
+    "phrases = pd.read_csv(picklePath + \"phrases.csv\", index_col=[0,1])\n",
+    "G = nx.read_graphml(picklePath + \"graph.graphml\")\n",
+    "instruments = json.load(open(numPath + \"instruments.json\"))\n",
+    "embedding = json.load(open(numPath + \"embedding.json\", \"r\"))\n",
     "qa = FixedEmbeddingComposite(DWaveSampler(), embedding)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -78,10 +79,8 @@
     "    reads = 1000\n",
     "\n",
     "    for a in annealRange:\n",
-    "        sampleset = qa.sample(bqm, num_reads=reads, annealing_time=a, label=f\"{identifier}_at={a}\")\n",
-    "        sample = sampleset.first\n",
-    "\n",
-    "        A = annotateSampleGraph(sample.sample, G)\n",
+    "        sampleset = qa.sample(bqm, num_reads=reads, annealing_time=a, label=f\"{IDENTIFIER}_{NUM}_at={a}\")\n",
+    "        sample = firstValid(sampleset, G)\n",
     "\n",
     "        new_row = pd.DataFrame({\n",
     "            \"Anneal time\": [sampleset.info[\"timing\"][\"qpu_anneal_time_per_sample\"]],\n",
@@ -90,9 +89,7 @@
     "            \"Total reads\": [reads],\n",
     "            \"Chain break fraction\": [sample.chain_break_fraction],\n",
     "            \"Lowest energy\": [bqm.energy(sample.sample)],\n",
-    "            \"Total entropy\": [totalEntropy(A)],\n",
-    "            \"Overlaps\": [findOverlaps(annotateSampleGraph(sample.sample, G))],\n",
-    "            \"Duplicates\": [len(duplicates(sample.sample, G))]\n",
+    "            \"Total entropy\": [totalEntropy(G)]\n",
     "            })\n",
     "    \n",
     "        print(f\"Anneal time {a} us recorded!\")\n",
@@ -102,8 +99,9 @@
     "\n",
     "# 10–300 repeated four times\n",
     "annealTimes = range(10,310,10)\n",
-    "bqm = createBQM(G, phrases, instruments, 6, 6, 1)\n",
-    "recordAnnealTime(annealTimes, bqm, path+\"anneal-time.csv\")"
+    "bqm = createBQM(G, phrases, instruments, 6, 6)\n",
+    "\n",
+    "recordAnnealTime(annealTimes, bqm, dataPath+\"anneal-time.csv\")"
    ]
   },
   {
