--- a/Code/ChainStrength.ipynb
+++ b/Code/ChainStrength.ipynb
@@ -2,55 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "import matplotlib.pyplot as plt\n",
+    "IDENTIFIER = \"haydn-op1\"\n",
+    "NUM = 4\n",
+    "\n",
     "import json\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "from dwave.system import DWaveSampler, FixedEmbeddingComposite\n",
-    "import dwave.inspector\n",
     "\n",
-    "from plotters import plotHistogram, annotateSampleGraph, plotCSV, plotSampleGraph, plotArrangement\n",
+    "from plots import plotCSV\n",
     "from qubo import createBQM\n",
-    "from sampleAnalysis import duplicates, findOverlaps, totalEntropy\n",
+    "from samples import firstValid, totalEntropy\n",
     "\n",
-    "identifier = \"Haydn-3\"\n",
-    "path = f\"../Pickles/{identifier}/{identifier}_\"\n",
     "\n",
-    "instruments = json.load(open(path + \"instruments.json\"))\n",
-    "phrases = pickle.load(open(path + \"phrases.pkl\", \"rb\"))\n",
-    "G = nx.read_graphml(path + \"graph.graphml\")\n",
-    "embedding = json.load(open(path + \"embedding.json\", \"r\"))\n",
+    "picklePath = f\"../Pickles/{IDENTIFIER}/{IDENTIFIER}_\"\n",
+    "numPath = f\"../Pickles/{IDENTIFIER}/{NUM}/{IDENTIFIER}_{NUM}_\"\n",
+    "dataPath = f\"../Data/{IDENTIFIER}/{NUM}/{IDENTIFIER}_{NUM}_\"\n",
+    "\n",
+    "phrases = pd.read_csv(picklePath + \"phrases.csv\", index_col=[0,1])\n",
+    "G = nx.read_graphml(picklePath + \"graph.graphml\")\n",
+    "instruments = json.load(open(numPath + \"instruments.json\"))\n",
+    "embedding = json.load(open(numPath + \"embedding.json\", \"r\"))\n",
     "qa = FixedEmbeddingComposite(DWaveSampler(), embedding)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reads = 3000\n",
-    "\n",
-    "bqm = createBQM(G, phrases, instruments, 6, 6, 1)\n",
-    "sampleset = qa.sample(bqm, num_reads=reads, label=f\"Haydn_{reads}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dwave.inspector.show(sampleset)\n",
-    "#print(sampleset.info[\"embedding_context\"][\"chain_strength\"])\n",
-    "#print(sampleset.first.chain_break_fraction)\n",
-    "#plotSampleGraph(sampleset.first.sample, G, instruments)\n"
    ]
   },
   {
@@ -65,10 +42,8 @@
     "    reads = 1000\n",
     "\n",
     "    for s in strengthRange:\n",
-    "        sampleset = qa.sample(bqm, num_reads=reads, chain_strength=s, label=f\"{identifier}_cs={s}\")\n",
-    "        sample = sampleset.first\n",
-    "\n",
-    "        A = annotateSampleGraph(sample.sample, G)\n",
+    "        sampleset = qa.sample(bqm, num_reads=reads, chain_strength=s, label=f\"{IDENTIFIER}_{NUM}_cs={s}\")\n",
+    "        sample = firstValid(sampleset)\n",
     "\n",
     "        new_row = pd.DataFrame({\n",
     "            \"Chain strength\": [sampleset.info[\"embedding_context\"][\"chain_strength\"]],\n",
@@ -76,9 +51,7 @@
     "            \"Time\": [sampleset.info[\"timing\"][\"qpu_access_time\"]],\n",
     "            \"Chain break fraction\": [sample.chain_break_fraction],\n",
     "            \"Lowest energy\": [bqm.energy(sample.sample)],\n",
-    "            \"Total entropy\": [totalEntropy(A)],\n",
-    "            \"Overlaps\": [findOverlaps(annotateSampleGraph(sample.sample, G))],\n",
-    "            \"Duplicates\": [len(duplicates(sample.sample, G))]\n",
+    "            \"Total entropy\": [totalEntropy(sample, G)]\n",
     "            })\n",
     "    \n",
     "        print(f\"Chain strength {s} recorded!\")\n",
@@ -89,12 +62,12 @@
     "\n",
     "chainStrengths = range(12,42)\n",
     "bqm = createBQM(G, phrases, instruments, 6, 6, 1)\n",
-    "recordChainStrength(chainStrengths, bqm, path+\"chain-strength.csv\")"
+    "recordChainStrength(chainStrengths, bqm, dataPath+\"chain-strength.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -129,13 +102,11 @@
     }
    ],
    "source": [
-    "plotCSV(path+\"chain-strength.csv\", \"Chain strength\", \"Lowest energy\")\n",
-    "plt.show()\n",
-    "plotCSV(path+\"chain-strength.csv\", \"Chain strength\", \"Chain break fraction\")\n",
-    "#plt.vlines(31.675,0,.1)\n",
+    "plotCSV(dataPath+\"chain-strength.csv\", \"Chain strength\", \"Lowest energy\")\n",
     "\n",
     "# ~25 optimal???\n",
-    "# chain_break_method=chain_breaks.discard?????"
+    "# chain_break_method=chain_breaks.discard?????\n",
+    "# Don't care about chain breaks, only valid solutions"
    ]
   }
  ],
